--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [semantic_release]
-version_variable = Ionburst/__init__.py
+version_variable = Ionburst/__init__.py:__version__
 upload_to_pypi = true
