--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [semantic_release]
 version_variable = Ionburst/__init__.py:__version__
 upload_to_pypi = true
+upload_to_release = false
 hvcs = gitlab
