--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,4 @@ version_variable = Ionburst/__init__.py:__version__
 upload_to_pypi = true
 upload_to_release = false
 hvcs = gitlab
+build_command = python3 setup.py sdist bdist_wheel
