fix: add README.rst to publish step

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ publish:
  script:
   - 'm2r README.md'
   - 'release changelog'
-  - 'release commit-and-tag CHANGELOG.md build_info Ionburst/__init__.py'
+  - 'release commit-and-tag CHANGELOG.md build_info Ionburst/__init__.py README.rst'
   - 'twine upload dist/*'
  only:
   - main
